--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!doctype html><html><head><meta charset="utf-8"><title>Demo</title><meta name="viewport" content="width=device-width,initial-scale=1"></head><body><script src="bundle.js"></script></body></html>
+<html><head><title>Video Snap demo</title><style>.content {
+            padding: 40px;
+        }
+        .columns {
+            display: flex;
+        }
+        .column {
+            width: 50%;
+        }
+        .row {
+            margin-bottom: 10px;
+        }</style></head><body><div class="content"><h1>Video-Snap</h1><div class="columns"><div class="column"><h2>1. Insert number of thumbnails</h2><div class="row"><input id="frames" value="10" type="number" min="10" max="100"></div><h2>2. Select video file and wait for thumbnails to appear</h2><div><input id="fileInput" type="file" accept="video/*"></div></div><div class="column" id="thumbnails"></div></div></div><script src="bundle.js"></script></body></html>
